# csp_freertos_stm32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  platform.resc  platform_debug.resc  stm32h753.resc  toolchain.cmake
.github/workflows/: build-cmake.yml
src/: csp_custom_endian.h  freertos.c  main.c  smt32h7xx_hal_msp.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c
src/FreeRTOS-Config/: CMakeLists.txt
